merubah deksripsii tentang saya

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="w-full sm:w-1/2 flex flex-col text-center sm:text-left">
           <p class="text-main font-bold text-3xl mb-4 transition-all hover:scale-105 hover:text-hover">About Me</p> 
-          <p class="mb-4 transition-all hover:scale-105 hover:text-hover">I am a Sriwijaya State Polytechnic student from the D4 Informatics Management study program who is currently studying in the 3rd semester. I have an interest in web development and have a goal to become a fullstack web developer. I have been studying the frontend field for approximately 5 months.</p>
+          <p class="mb-4 transition-all hover:scale-105 hover:text-hover">I am a Sriwijaya State Polytechnic student from the D4 Informatics Management study program who is currently studying in the 3rd semester. I have an interest in web development and have a goal to become a fullstack web developer.</p>
           <div class="flex flex-col sm:flex-row gap-4">
             <a href="#project" class="w-full"><button class="w-full sm:w-1/2 bg-main text-white p-4 rounded-lg shadow-md transition-all hover:scale-105 hover:bg-hover">Project</button></a>
           </div>
@@ -85,16 +85,14 @@
     <section class="w-full flex flex-col gap-10 sm:gap-20 justify-center h-auto py-10 sm:py-32 items-center " id="project">
       <div class="w-full sm:w-3/4 flex flex-col items-center p-4 sm:p-10">
         <img src="../assets/images/project1.png" class="w-full sm:w-1/2 h-auto rounded-lg mb-4" alt="Project Image" id="img-1">
-        <p class="text-2xl font-bold mb-2 transition-all hover:scale-105 hover:text-hover">Bjir Travel - Dummy Project</p>
+        <p class="text-2xl font-bold mb-2 transition-all hover:scale-105 hover:text-hover">Bjir Travel - Dicoding Submission Course</p>
         <p class="text-center transition-all hover:scale-105 hover:text-hover">Bjir Travel is my first project in practicing simple web frontend using HTML and CSS</p>
-        <p class="transition-all hover:scale-105 hover:text-hover text-blue-600"><a href="https://github.com/Rio-adri/bjir-travel">Github repository link</a></p>
       </div>
 
       <div class="w-full sm:w-3/4 flex flex-col items-center p-4 sm:p-10">
         <img src="../assets/images/project2.png" class="w-full sm:w-1/2 h-auto rounded-lg mb-4" alt="Project Image" id="img-1">
-        <p class="text-2xl font-bold mb-2 transition-all hover:scale-105 hover:text-hover">Bookself APP - Dummy Project</p>
+        <p class="text-2xl font-bold mb-2 transition-all hover:scale-105 hover:text-hover">Bookself APP - Dicoding Submission Course</p>
         <p class="text-center transition-all hover:scale-105 hover:text-hover">Bookself App is my second project in practicing creating simple interactive web frontend using HTML, CSS, and Javascript</p>
-        <p class="transition-all hover:scale-105 hover:text-hover text-blue-600"><a href="https://github.com/Rio-adri/bookself-app">Github repository link</a></p>
       </div>
     </section>
   </main>
