--- a/src/index.html
+++ b/src/index.html
@@ -87,12 +87,15 @@
         <img src="../assets/images/project1.png" class="w-full sm:w-1/2 h-auto rounded-lg mb-4" alt="Project Image" id="img-1">
         <p class="text-2xl font-bold mb-2 transition-all hover:scale-105 hover:text-hover">Bjir Travel - Dicoding Submission Course</p>
         <p class="text-center transition-all hover:scale-105 hover:text-hover">Bjir Travel is my first project in practicing simple web frontend using HTML and CSS</p>
+        <p class="text-center text-blue-600 transition-all hover:scale-105 hover:text-hover"><a href="https://github.com/Rio-adri/bjir-travel">Github link Repository</a></p>
+
       </div>
 
       <div class="w-full sm:w-3/4 flex flex-col items-center p-4 sm:p-10">
         <img src="../assets/images/project2.png" class="w-full sm:w-1/2 h-auto rounded-lg mb-4" alt="Project Image" id="img-1">
         <p class="text-2xl font-bold mb-2 transition-all hover:scale-105 hover:text-hover">Bookself APP - Dicoding Submission Course</p>
         <p class="text-center transition-all hover:scale-105 hover:text-hover">Bookself App is my second project in practicing creating simple interactive web frontend using HTML, CSS, and Javascript</p>
+        <p class="text-center text-blue-600 transition-all hover:scale-105 hover:text-hover"><a href="https://github.com/Rio-adri/bookself-app">Github link Repository</a></p>
       </div>
     </section>
   </main>
